# fastapi-with-python-socketio-example

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
core/: socket_io.py
routes/: ws_no_prefix.py
static/: index.html
